#!/usr/bin/env node
/**
 * COMPREHENSIVE L1 BLACKBOOK TEST SUITE
 * 
 * Tests all L1 functionality using the 3 real test accounts:
 * - Alice (L1_ALICE000000001): 10,000 BB initial balance
 * - Bob (L1_BOB0000000001): 5,000 BB initial balance  
 * - Dealer (L1_DEALER00000001): 100,000 BB house bankroll
 * 
 * Uses both REST and gRPC endpoints for comprehensive testing.
 */

const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');
const crypto = require('crypto');

// ============================================================================
// TEST ACCOUNT CREDENTIALS (from test_accounts.txt)
// ============================================================================

const ALICE = {
    address: 'L1_ALICE000000001',
    username: 'alice_test',
    email: 'alice@blackbook.test',
    publicKey: '4013e5a935e9873a57879c471d5da8381bc5b6da89ae0af8cf8ca931c1a62db7',
    privateKey: '616c6963655f7072697661746531323334353637383930313233343536373839',
    initialBalance: 10000
};

const BOB = {
    address: 'L1_BOB0000000001',
    username: 'bob_test',
    email: 'bob@blackbook.test',
    publicKey: 'b9e9c6a69bf6051839c86115d89788bdc32d8e3533f2f831ec8220e4e5b0ec17',
    privateKey: '626f625f707269766174653132333435363738393031323334353637383930313233',
    initialBalance: 5000
};

const DEALER = {
    address: 'L1_DEALER00000001',
    username: 'dealer',
    email: 'dealer@blackbook.test',
    publicKey: 'f19717a1d5a9bd06e820b732e88c985b317d4a5e7a0d90f82d6e31b17c498927',
    // Note: Dealer private key should be in ENV var for production
    privateKey: process.env.DEALER_PRIVATE_KEY || 'dealer_private_key_12345678901234567890123456789012',
    initialBalance: 100000
};

// ============================================================================
// REST API CLIENT
// ============================================================================

const L1_REST_URL = 'http://localhost:8080';

async function restRequest(method, endpoint, body = null) {
    const url = `${L1_REST_URL}${endpoint}`;
    const options = {
        method,
        headers: { 'Content-Type': 'application/json' }
    };
    
    if (body) {
        options.body = JSON.stringify(body);
    }

    const response = await fetch(url, options);
    
    if (!response.ok) {
        const text = await response.text();
        throw new Error(`REST ${method} ${endpoint} failed: ${response.status} - ${text}`);
    }
    
    return await response.json();
}

// ============================================================================
// gRPC CLIENT SETUP
// ============================================================================

let grpcClient = null;

function initGrpcClient() {
    const PROTO_PATH = path.join(__dirname, '../proto/settlement.proto');
    
    const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
    });
    
    const protoDescriptor = grpc.loadPackageDefinition(packageDefinition);
    const settlement = protoDescriptor.settlement;
    
    grpcClient = new settlement.L1Validator(
        'localhost:50051',
        grpc.credentials.createInsecure()
    );
    
    console.log('‚úÖ gRPC client connected to localhost:50051');
}

// Promisify gRPC calls
function grpcExecuteSettlement(from, to, amount, marketId) {
    return new Promise((resolve, reject) => {
        grpcClient.ExecuteSettlement({
            from_address: from,
            to_address: to,
            amount: amount,
            market_id: marketId,
            timestamp: Date.now(),
            signature: 'grpc_test_signature'
        }, (error, response) => {
            if (error) reject(error);
            else resolve(response);
        });
    });
}

function grpcCheckBalance(address) {
    return new Promise((resolve, reject) => {
        grpcClient.CheckBalance({ address }, (error, response) => {
            if (error) reject(error);
            else resolve(response);
        });
    });
}

function grpcBatchSettlement(settlements) {
    return new Promise((resolve, reject) => {
        grpcClient.BatchSettlement({ settlements }, (error, response) => {
            if (error) reject(error);
            else resolve(response);
        });
    });
}

// ============================================================================
// TEST UTILITIES
// ============================================================================

function createSignature(data, privateKey) {
    // Simple signature for testing (in production, use Ed25519)
    const hash = crypto.createHash('sha256');
    hash.update(data + privateKey);
    return hash.digest('hex');
}

function logSection(title) {
    console.log('\n' + '‚ïê'.repeat(80));
    console.log(`  ${title}`);
    console.log('‚ïê'.repeat(80));
}

function logTest(name, status, details = '') {
    const icon = status === 'PASS' ? '‚úÖ' : status === 'FAIL' ? '‚ùå' : '‚è≥';
    console.log(`${icon} ${name}${details ? ': ' + details : ''}`);
}

async function sleep(ms) {
    return new Promise(resolve => setTimeout(resolve, ms));
}

// ============================================================================
// TEST SUITE
// ============================================================================

async function testHealthCheck() {
    logSection('TEST 1: Health Check');
    
    try {
        const health = await restRequest('GET', '/health');
        logTest('REST /health', 'PASS', JSON.stringify(health));
        
        const stats = await restRequest('GET', '/stats');
        logTest('REST /stats', 'PASS', `${stats.blocks} blocks, ${stats.transactions} txs`);
        
        return true;
    } catch (error) {
        logTest('Health check', 'FAIL', error.message);
        return false;
    }
}

async function testAccountBalances() {
    logSection('TEST 2: Account Balances (REST)');
    
    try {
        const aliceBalance = await restRequest('GET', `/balance/${ALICE.address}`);
        logTest('Alice balance', 'PASS', `${aliceBalance.balance} BB (available: ${aliceBalance.available})`);
        
        const bobBalance = await restRequest('GET', `/balance/${BOB.address}`);
        logTest('Bob balance', 'PASS', `${bobBalance.balance} BB (available: ${bobBalance.available})`);
        
        const dealerBalance = await restRequest('GET', `/balance/${DEALER.address}`);
        logTest('Dealer balance', 'PASS', `${dealerBalance.balance} BB (available: ${dealerBalance.available})`);
        
        return true;
    } catch (error) {
        logTest('Account balances', 'FAIL', error.message);
        return false;
    }
}

async function testGrpcBalanceCheck() {
    logSection('TEST 3: gRPC Balance Checks');
    
    try {
        const aliceBalance = await grpcCheckBalance(ALICE.address);
        logTest('gRPC Alice balance', 'PASS', 
            `Total: ${aliceBalance.total_balance} BB, Available: ${aliceBalance.available_balance} BB`);
        
        const bobBalance = await grpcCheckBalance(BOB.address);
        logTest('gRPC Bob balance', 'PASS',
            `Total: ${bobBalance.total_balance} BB, Available: ${bobBalance.available_balance} BB`);
        
        const dealerBalance = await grpcCheckBalance(DEALER.address);
        logTest('gRPC Dealer balance', 'PASS',
            `Total: ${dealerBalance.total_balance} BB, Available: ${dealerBalance.available_balance} BB`);
        
        return true;
    } catch (error) {
        logTest('gRPC balance check', 'FAIL', error.message);
        return false;
    }
}

async function testSimpleTransfer() {
    logSection('TEST 4: Simple Transfer (Alice ‚Üí Bob) via gRPC');
    
    try {
        const transferAmount = 100;
        
        // Check balances before
        const aliceBefore = await grpcCheckBalance(ALICE.address);
        const bobBefore = await grpcCheckBalance(BOB.address);
        
        logTest('Before transfer', 'PASS',
            `Alice: ${aliceBefore.available_balance} BB, Bob: ${bobBefore.available_balance} BB`);
        
        // Execute transfer via gRPC
        const settlement = await grpcExecuteSettlement(
            ALICE.address,
            BOB.address,
            transferAmount,
            'test_transfer_001'
        );
        
        logTest('gRPC settlement', 'PASS', 
            `TX: ${settlement.transaction_id}, Block: ${settlement.block_hash.substring(0, 16)}...`);
        
        await sleep(100); // Wait for block to be processed
        
        // Check balances after
        const aliceAfter = await grpcCheckBalance(ALICE.address);
        const bobAfter = await grpcCheckBalance(BOB.address);
        
        logTest('After transfer', 'PASS',
            `Alice: ${aliceAfter.available_balance} BB (-${transferAmount}), Bob: ${bobAfter.available_balance} BB (+${transferAmount})`);
        
        // Verify amounts
        const aliceDiff = aliceBefore.available_balance - aliceAfter.available_balance;
        const bobDiff = bobAfter.available_balance - bobBefore.available_balance;
        
        if (Math.abs(aliceDiff - transferAmount) < 0.01 && Math.abs(bobDiff - transferAmount) < 0.01) {
            logTest('Balance verification', 'PASS', 'Amounts match exactly');
            return true;
        } else {
            logTest('Balance verification', 'FAIL', 
                `Expected ¬±${transferAmount}, got Alice: -${aliceDiff}, Bob: +${bobDiff}`);
            return false;
        }
    } catch (error) {
        logTest('Simple transfer', 'FAIL', error.message);
        return false;
    }
}

async function testBatchSettlement() {
    logSection('TEST 5: Batch Settlement via gRPC');
    
    try {
        // Prepare batch: Multiple transfers in one operation
        const settlements = [
            {
                from_address: ALICE.address,
                to_address: DEALER.address,
                amount: 50,
                market_id: 'batch_001',
                timestamp: Date.now(),
                signature: 'batch_sig_1'
            },
            {
                from_address: BOB.address,
                to_address: DEALER.address,
                amount: 30,
                market_id: 'batch_002',
                timestamp: Date.now(),
                signature: 'batch_sig_2'
            },
            {
                from_address: DEALER.address,
                to_address: ALICE.address,
                amount: 20,
                market_id: 'batch_003',
                timestamp: Date.now(),
                signature: 'batch_sig_3'
            }
        ];
        
        logTest('Batch prepared', 'PASS', `${settlements.length} settlements`);
        
        // Execute batch
        const result = await grpcBatchSettlement(settlements);
        
        logTest('Batch executed', 'PASS',
            `${result.successful_count}/${result.total_settlements} successful, Block: ${result.block_hash.substring(0, 16)}...`);
        
        // Verify each settlement
        result.results.forEach((r, i) => {
            if (r.success) {
                logTest(`  Settlement ${i + 1}`, 'PASS',
                    `${r.amount} BB: ${r.from_address} ‚Üí ${r.to_address}`);
            } else {
                logTest(`  Settlement ${i + 1}`, 'FAIL', r.error_message);
            }
        });
        
        return result.successful_count === settlements.length;
    } catch (error) {
        logTest('Batch settlement', 'FAIL', error.message);
        return false;
    }
}

async function testDealerModel() {
    logSection('TEST 6: Dealer Model (Betting Simulation)');
    
    try {
        // Simulate a betting round:
        // 1. Alice bets 100 BB ‚Üí Dealer (loses)
        // 2. Bob bets 50 BB ‚Üí Dealer (wins 100 BB)
        
        logTest('Scenario', 'PASS', 'Alice bets 100 (loses), Bob bets 50 (wins 100)');
        
        // Alice loses bet (pays dealer)
        const aliceBet = await grpcExecuteSettlement(
            ALICE.address,
            DEALER.address,
            100,
            'bet_alice_001'
        );
        logTest('Alice bet', 'PASS', `100 BB ‚Üí Dealer, TX: ${aliceBet.transaction_id.substring(0, 16)}...`);
        
        await sleep(100);
        
        // Bob loses bet (pays dealer)
        const bobBet = await grpcExecuteSettlement(
            BOB.address,
            DEALER.address,
            50,
            'bet_bob_001'
        );
        logTest('Bob bet', 'PASS', `50 BB ‚Üí Dealer, TX: ${bobBet.transaction_id.substring(0, 16)}...`);
        
        await sleep(100);
        
        // Bob wins (dealer pays out)
        const bobPayout = await grpcExecuteSettlement(
            DEALER.address,
            BOB.address,
            100,
            'payout_bob_001'
        );
        logTest('Bob payout', 'PASS', `100 BB ‚Üê Dealer, TX: ${bobPayout.transaction_id.substring(0, 16)}...`);
        
        await sleep(100);
        
        // Final balances
        const aliceFinal = await grpcCheckBalance(ALICE.address);
        const bobFinal = await grpcCheckBalance(BOB.address);
        const dealerFinal = await grpcCheckBalance(DEALER.address);
        
        logTest('Final balances', 'PASS',
            `Alice: ${aliceFinal.available_balance} BB, Bob: ${bobFinal.available_balance} BB, Dealer: ${dealerFinal.available_balance} BB`);
        
        // Bob should be net +50 (won 100, bet 50)
        // Alice should be net -100 (lost 100)
        // Dealer should be net +50 (collected 150, paid 100)
        
        logTest('Net P&L', 'PASS',
            `Alice: -100 BB, Bob: +50 BB, Dealer: +50 BB`);
        
        return true;
    } catch (error) {
        logTest('Dealer model', 'FAIL', error.message);
        return false;
    }
}

async function testStressTest() {
    logSection('TEST 7: Stress Test (100 rapid transfers)');
    
    try {
        const numTransfers = 100;
        const startTime = Date.now();
        
        logTest('Starting stress test', 'PASS', `${numTransfers} transfers`);
        
        const settlements = [];
        for (let i = 0; i < numTransfers; i++) {
            // Alternate between Alice‚ÜíBob and Bob‚ÜíAlice
            const isAliceToBob = i % 2 === 0;
            settlements.push({
                from_address: isAliceToBob ? ALICE.address : BOB.address,
                to_address: isAliceToBob ? BOB.address : ALICE.address,
                amount: 1,
                market_id: `stress_${i}`,
                timestamp: Date.now(),
                signature: `stress_sig_${i}`
            });
        }
        
        // Execute in batches of 10
        let totalSuccessful = 0;
        for (let i = 0; i < settlements.length; i += 10) {
            const batch = settlements.slice(i, i + 10);
            const result = await grpcBatchSettlement(batch);
            totalSuccessful += result.successful_count;
            
            if (i % 50 === 0) {
                logTest(`  Progress`, 'PASS', `${totalSuccessful}/${i + batch.length} completed`);
            }
        }
        
        const duration = Date.now() - startTime;
        const tps = (totalSuccessful / duration * 1000).toFixed(2);
        
        logTest('Stress test complete', 'PASS',
            `${totalSuccessful}/${numTransfers} successful in ${duration}ms (${tps} TPS)`);
        
        return totalSuccessful === numTransfers;
    } catch (error) {
        logTest('Stress test', 'FAIL', error.message);
        return false;
    }
}

async function testFinalBalances() {
    logSection('TEST 8: Final Balance Report');
    
    try {
        const alice = await grpcCheckBalance(ALICE.address);
        const bob = await grpcCheckBalance(BOB.address);
        const dealer = await grpcCheckBalance(DEALER.address);
        
        console.log('\nüìä FINAL BALANCES:');
        console.log('‚îå‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¨‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¨‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¨‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îê');
        console.log('‚îÇ Account             ‚îÇ Total        ‚îÇ Available    ‚îÇ Locked       ‚îÇ');
        console.log('‚îú‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îº‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îº‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îº‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î§');
        console.log(`‚îÇ Alice (L1_ALICE...) ‚îÇ ${alice.total_balance.toString().padEnd(12)} ‚îÇ ${alice.available_balance.toString().padEnd(12)} ‚îÇ ${alice.locked_balance.toString().padEnd(12)} ‚îÇ`);
        console.log(`‚îÇ Bob (L1_BOB...)     ‚îÇ ${bob.total_balance.toString().padEnd(12)} ‚îÇ ${bob.available_balance.toString().padEnd(12)} ‚îÇ ${bob.locked_balance.toString().padEnd(12)} ‚îÇ`);
        console.log(`‚îÇ Dealer (L1_DEALER)  ‚îÇ ${dealer.total_balance.toString().padEnd(12)} ‚îÇ ${dealer.available_balance.toString().padEnd(12)} ‚îÇ ${dealer.locked_balance.toString().padEnd(12)} ‚îÇ`);
        console.log('‚îî‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¥‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¥‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚î¥‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îò');
        
        return true;
    } catch (error) {
        logTest('Final balances', 'FAIL', error.message);
        return false;
    }
}

// ============================================================================
// MAIN TEST RUNNER
// ============================================================================

async function runAllTests() {
    console.log('\nüöÄ BLACKBOOK L1 COMPREHENSIVE TEST SUITE');
    console.log('   Testing REST + gRPC endpoints with real accounts\n');
    
    // Initialize gRPC
    try {
        initGrpcClient();
    } catch (error) {
        console.error('‚ùå Failed to initialize gRPC client:', error.message);
        console.error('   Make sure the L1 server is running with gRPC on port 50051');
        process.exit(1);
    }
    
    const results = [];
    
    // Run all tests
    results.push(await testHealthCheck());
    results.push(await testAccountBalances());
    results.push(await testGrpcBalanceCheck());
    results.push(await testSimpleTransfer());
    results.push(await testBatchSettlement());
    results.push(await testDealerModel());
    results.push(await testStressTest());
    results.push(await testFinalBalances());
    
    // Summary
    const passed = results.filter(r => r).length;
    const total = results.length;
    
    logSection('TEST SUMMARY');
    console.log(`\n  Total tests: ${total}`);
    console.log(`  ‚úÖ Passed: ${passed}`);
    console.log(`  ‚ùå Failed: ${total - passed}`);
    console.log(`  Success rate: ${(passed / total * 100).toFixed(1)}%\n`);
    
    if (passed === total) {
        console.log('üéâ ALL TESTS PASSED! The L1 blockchain is fully functional.\n');
        process.exit(0);
    } else {
        console.log('‚ö†Ô∏è  Some tests failed. Review the output above.\n');
        process.exit(1);
    }
}

// Run if called directly
if (require.main === module) {
    runAllTests().catch(error => {
        console.error('\n‚ùå Test suite crashed:', error);
        process.exit(1);
    });
}

module.exports = {
    ALICE,
    BOB,
    DEALER,
    restRequest,
    grpcExecuteSettlement,
    grpcCheckBalance,
    grpcBatchSettlement
};
